[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://chg.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -341.0
margin_bottom = -274.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 565.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 565.0
margin_bottom = 161.0
size_flags_vertical = 3

[node name="dir" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 467.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
text = "direct"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 471.0
margin_right = 565.0
margin_bottom = 161.0
size_flags_horizontal = 3
text = "dir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 565.0
margin_bottom = 326.0
size_flags_vertical = 3

[node name="from" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 262.0
margin_bottom = 161.0
size_flags_horizontal = 3
text = "from"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chg" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 266.0
margin_right = 299.0
margin_bottom = 161.0
text = "<->"
script = ExtResource( 2 )

[node name="to" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 303.0
margin_right = 565.0
margin_bottom = 161.0
size_flags_horizontal = 3
text = "to"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change" type="Button" parent="HBoxContainer"]
margin_left = 569.0
margin_right = 683.0
margin_bottom = 326.0
size_flags_horizontal = 3
text = "change"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = -463.309
margin_top = 57.1202
margin_right = -24.3086
margin_bottom = 412.12
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "E:/workspace/godot/program/change file type"
current_path = "E:/workspace/godot/program/change file type/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/chg" to="HBoxContainer/VBoxContainer/HBoxContainer2/chg" method="_on_chg_pressed"]
[connection signal="pressed" from="HBoxContainer/change" to="." method="change_file_type"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
